[package]
name = "fuchsia-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25", default-features = false, features = [
    "gif",
    "jpeg",
    "png",
    "webp",
] }
actix-web = { version = "4", default-features = false, features = ["macros"] }
actix-multipart = { version = "0.6", default-features = false }
futures = { version = "0.3", default-features = false }
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"], default-features = false }
rayon = "1.0"
